@@ -59,7 +59,6 @@ import lombok.RequiredArgsConstructor;
 import net.runelite.client.ui.ColorScheme;
 import net.runelite.client.ui.FontManager;
 import net.runelite.client.util.SwingUtil;
-import org.apache.commons.lang3.StringUtils;
 import org.pushingpixels.substance.internal.ui.SubstanceListUI;
 
 /**
@@ -268,7 +267,7 @@ public class IconTextField extends JPanel
 
 	private void updateContextButton()
 	{
-		boolean empty = StringUtils.isBlank(textField.getText());
+		boolean empty = textField.getText().isBlank();
 
 		clearButton.setVisible(!empty);
 		suggestionButton.setVisible(!suggestionListModel.isEmpty() && empty);
